--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "ai-seo-backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "openai": "^4.5.0"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "openai": "^4.96.0"
   }
 }
